--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "framer-motion": "^10.16.1",
     "next": "^14.0.3",
     "next-auth": "^4.24.4",
+    "node": "^21.6.2",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-slider": "^2.0.6",
+    "request": "^2.88.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
